# interview_problem_sets

./: .gitignore  README.md
ps1/api/migrations/2022-09-09-151451_create/: down.sql  up.sql
ps1/api/src/: config.rs  database.rs  schema.rs  server.rs
ps1/api/src/handlers/: computes.rs  reminders.rs  stocks.rs
ps1/api/src/models/: reminders.rs  stocks.rs
ps1/api/src/wsocket/: websocket.rs
ps1/bot/: coins.py  reminders.py
ps1/common/: file_utilities.cpp
ps1/dbops/: CMakeLists.txt  run.sh
ps1/dbops/dat/stocks/: data.json
ps1/dbops/src/: data_operations.cpp  data_operations.h  guru_sqlite.cpp  guru_sqlite.h  parse.cpp  parser_thread.h
ps1/scrape/dat/: ticks.json
ps1/scrape/src/: parse_yahoofinance.py
ps2/api/: .env  .travis.yml  Cargo.toml  diesel.toml
ps2/api/migrations/2022-09-09-151451_create/: up.sql
ps2/api/src/: auth.rs  errors.rs  helpers.rs  main.rs  routes.rs  schema.rs  server.rs  state.rs  validate.rs
ps2/api/src/handlers/: mod.rs  params.rs  stocks.rs
ps2/api/src/middleware/: auth.rs
ps2/api/src/models/: mod.rs  stocks.rs
ps2/api/src/wsocket/: mod.rs  server.rs
ps2/bot/: .env  conf.ini  reminders.py  stocks.py
ps2/common/: file_utilities.h
ps2/dbops/config/: log_conf.yaml
ps2/dbops/dat/stocks/: data.json
ps2/dbops/src/: data_operations.cpp  data_operations.h  guru_sqlite.h  parse.cpp  parser_thread.h
ps2/logs/: botlog
