[package]
name = "botzie"
version = "0.1.0"
authors = ["Rahul Zalkikar <rayzck9@gmail.com>"]
edition = "2018"

[dependencies]
#actix = "0.13"
#actix-files = "0.6"
#actix-rt = "2"
#actix-web = "4"
#actix-web-actors = "4.1"
#actix-redis = "0.12.0"
#actix-cors = "0.6.0"
#actix-identity = "0.4.0"
#actix-service = "2.0.0"
#redis-async = "0.13"
actix = "0.9.0"
actix-files = "0.2"
actix-rt = "1.1"
actix-web = "2"
actix-web-actors = "2.0"
actix-redis = "0.8.0"
actix-service = "1.0.5"
actix-cors = "0.2.0"
actix-identity = "0.2.1"
actix-codec = "0.5"
redis-async = "0.6.1"

chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.1"
lazy_static = "1.4"
listenfd = "0.3"
rayon = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"

#jsonwebtoken = "7"
#actix-ratelimit = "0.2.1"
#argon2rs = "0.2.1"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["sqlite"]